--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,21 @@
   right: 25px;
   bottom: 140px;
   width: 30%;
-  min-width: 400px;
+  min-width: 350px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   height: 70%;
-  
+}
+
+.chatbot-max .react-chatbot-kit-chat-container {
+  position: fixed;
+  top: 2%;
+  left: 15%;
+  min-width: 350px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  height: 70%;
+
+  width: 70% !important;
+  height: 89%;
 }
 
 .react-chatbot-kit-chat-inner-container {
@@ -42,7 +53,21 @@
   font-family: Arial;
   display: flex;
   align-items: center;
-  min-height: 30px;
+  min-height: 35px;
+  font-size: 1.15rem;
+  color: #fff;
+  padding: 12.5px;
+  font-weight: normal;
+}
+
+.chatbot-max  .react-chatbot-kit-chat-header {
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
+  background-color: #157acc;
+  font-family: Arial;
+  display: flex;
+  align-items: center;
+  min-height: 35px;
   font-size: 1.15rem;
   color: #fff;
   padding: 12.5px;
@@ -57,7 +82,9 @@
   right: 45px;
   font-size: 1.3rem;
   color: #fff;
-  height: 55px;;
+  height: 55px;
+
+  /* bottom: calc(80% + 90px); */
 }
 
 .minimize-button {
@@ -65,11 +92,28 @@
     background: none;
     cursor: pointer;
     height: 10px;
-    width: 10px;
+    width: 0px;
     color: #fff;
+    padding-left: 0%;
 }
 
 .minimize-button:focus {
+  outline: none;
+}
+
+.fullscreen-button {
+  border: none;
+    background: none;
+    cursor: pointer;
+    height: 10px;
+    width: 0px;
+    color: #fff;
+    padding-top: 21px;
+    padding-left: 0%;
+    margin-right: 10px;
+}
+
+.fullscreen-button:focus {
   outline: none;
 }
 
@@ -143,6 +187,7 @@
 .react-chatbot-kit-chat-bot-message-container {
   display: flex;
   margin: 15px 0;
+  margin-bottom: 0;
   justify-content: flex-start;
 }
 
@@ -199,7 +244,13 @@
 .chatbot-loader-container {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: flex-start;
+}
+
+.chatbot-loader-container svg {
+  justify-content: baseline;
+  padding: 13px;
+  padding-left: 0%;
 }
 
 #chatbot-loader #chatbot-loader-dot1 {
