--- a/src/Components/FormButtons/FormButtons.css
+++ b/src/Components/FormButtons/FormButtons.css
@@ -1,6 +1,6 @@
 
 .react-chatbot-kit-chat-input-buttons {
-    min-width: 398.5px;
+    min-width: 348.5px;
     width: calc(30% - 1.5px);
     height: fit-content;
     position: fixed;
@@ -17,6 +17,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
 
+    /* width: calc(98% - 1.5px); */
 }
 
 .react-chatbot-kit-chat-input-buttons button {
@@ -35,4 +36,36 @@
 
     color: #fff;
     background-color: #0d86de;
+}
+
+.chatbot-max .react-chatbot-kit-chat-input-buttons {
+    min-width: 348.5px;
+    width: calc(70% - 1.5px);
+    height: fit-content;
+    position: fixed;
+    left: 15%;
+    top: 90.8%;
+    background-color: #fff;
+    border: solid 1px #d8d8d8;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.chatbot-max  .react-chatbot-kit-chat-input-buttons button {
+    width: 46%;
+    height: fit-content;
+    height: 100%;
+    padding: 6px;
+    margin: 4px;
+    color: #157acc;
+    background-color: #E9E9E9;
+    font-weight: normal;
+    font-size: 0.9rem;
+    max-height: 40px;
 }
