--- a/src/Components/FormButtons/FormButtons.css
+++ b/src/Components/FormButtons/FormButtons.css
@@ -1,7 +1,7 @@
 
 .react-chatbot-kit-chat-input-buttons {
-    min-width: 348.5px;
-    width: calc(30% - 1.5px);
+    min-width: 398.5px;
+    width: calc(35% - 1.5px);
     height: fit-content;
     position: fixed;
     right: 25px;
@@ -44,13 +44,13 @@
     height: fit-content;
     position: fixed;
     left: 15%;
-    top: 90.8%;
+    top: calc(100% - 4em);
     background-color: #fff;
     border: solid 1px #d8d8d8;
-    display: flex; 
-    justify-content: center; 
+    display: flex;
+    justify-content: center;
     align-items: center;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: none;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     padding-top: 5px;
