--- a/src/App.css
+++ b/src/App.css
@@ -288,6 +288,8 @@
 .react-chatbot-kit-chat-bot-avatar-icon {
   width: inherit;
   height: inherit;
+  border-radius: 50%;
+
 }
 
 .react-chatbot-kit-chat-bot-message {
