--- a/src/Components/CustomMessage/CustomMessage.css
+++ b/src/Components/CustomMessage/CustomMessage.css
@@ -1,18 +1,22 @@
-
-table {
-    border-spacing: 5px;
+ table {
+    border-spacing: 2px;
 }
 td {
     border-bottom: 1px solid #dfdfdf;
     border-left: 1px solid #dfdfdf;
     border-radius: 5px;
     padding: 5px;
+    /* background-color: #0f1629; */
+    /* background-color: #95dcc2; */
+    /* background-color: #fbfbb2; */
 }
 th {
-    border: 1px solid #b6b6b6;
+    /* border: 1px solid #b6b6b6; */
+    border-bottom: 1px solid #dfdfdf;
+    border-left: 1px solid #dfdfdf;
     border-radius: 5px;
     padding: 5px;
-    background-color: #b6b6b6;
+    background-color: #1e2939;
 }
 .query-collapsible {
     cursor: pointer;
@@ -20,9 +24,8 @@ th {
     border: none;
     text-align: left;
     outline: none;
-    /* background-color: #d8d6d6; */
-    background-color: #6f8596;
-    /* color: #031275; */
+    /* background-color: #101216; */
+    background-color: #1e2939;
     color: white;
     border-radius: 5px 5px 0 0;
     font-size: 20px;
@@ -45,12 +48,12 @@ th {
   
   .sql-query-content {
     padding: 15px;
-    /* margin: 0 0 10px 0;  */
     display: none;
     overflow: hidden;
-    /* background-color: #f1f1f1; */
-    background-color: #e4f2fc;
+    background-color: #0f1629;
     border-radius: 0 0 5px 5px;
+    color: white;
+    font-family: "Courier New", Arial, sans-serif;
   }
 
-  
+    
